--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,7 @@ img{
 #hero .media .rating-area{
     position: absolute;
     width: 55%;
+    min-width: 250px;
     bottom: 100px;
     left: 50%;
     transform: translateX(-50%);
@@ -342,6 +343,7 @@ img{
 }
 #hero .media .testimonial{
     width: 55%;
+    min-width: 250px;
     position: absolute;
     bottom: 30px;
     left: 50%;
